syntax = "proto3";

package user_V1;

import "google/protobuf/empty.proto";
import "model.proto";
option go_package = "github.com/kms-qwe/auth/app/pkg/user_V1;user_v1";

service UserV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Update(UpdateRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty); 
}

message CreateRequest {
    UserInfo info = 1;
}
message CreateResponse {
    int64 id = 1;
}
message GetRequest {
    int64 id = 1;
}
message GetResponse {
    User user = 1;
}
message UpdateRequest {
    UserInfoUpdate user_update = 1;
}
message DeleteRequest {
    int64 id = 1;
}
